# ros_rknn_yolo

./: .gitmodules  CMakeLists.txt  README.md  README_cn.md  fix_rknn2_runtime  package.xml  requirements.txt
cfg/: RknnYolo.cfg
config/: default.yaml  default2.yaml  default_sahi_v8m.yaml  default_sahi_v8s.yaml  default_v5s.yaml  default_v8m.yaml  default_v8s.yaml  default_v8s_seg.yaml
launch/: default.yaml  xiaoqiang_yolo.launch  xiaoqiang_yolo_sahi_v8m.launch  xiaoqiang_yolo_sahi_v8s.launch  xiaoqiang_yolo_v5s.launch  xiaoqiang_yolo_v8m.launch  xiaoqiang_yolo_v8s.launch  xiaoqiang_yolo_v8s_seg.launch
rknn2_runtime/: rknn_toolkit_lite2-2.0.0b1-cp310-cp310-linux_aarch64.whl
src/: rknn_yolo_node.py  rknn_yolo_node.sh  rknnpool.py  sahi_yolov8_func.py  yolov5_func.py  yolov8_func.py  yolov8_seg_func.py
srv/: DoYolo.srv
test/: bus_do_yolo_srv.py  bus_do_yolo_srv2.py  kun_do_yolo.py  kun_do_yolo2.py  pedestrian_do_yolo.py  pedestrian_do_yolo2.py  smallcar_do_yolo_srv.py  smallcar_do_yolo_srv2.py  test_do_yolo_srv.py
